--- a/client/styles/_animations.styl
+++ b/client/styles/_animations.styl
@@ -14,4 +14,15 @@ offsets = translateX(-50%) translateY(-50%)
       transform offsets scale(5)
   .like-leave-active
     display none
-    
+
+.animated {
+  stroke-dasharray: 100;
+  animation: dash 5s infinite;
+}
+
+
+@keyframes dash {
+  to {
+    stroke-dashoffset: 1000;
+  }
+}
