--- a/client/styles/_animations.styl
+++ b/client/styles/_animations.styl
@@ -15,13 +15,23 @@ offsets = translateX(-50%) translateY(-50%)
   .like-leave-active
     display none
 
+.wheel {
+  animation: rotate 10s cubic-bezier(0,0,1,1) infinite alternate;
+  transform-origin: 50% 50%;
+}
+
 .animated {
   animation: dash 5s infinite;
 }
 
-
 @keyframes dash {
   to {
     stroke-dashoffset: 100;
+  }
+}
+
+@keyframes rotate {
+  50% {
+      transform: rotate(360deg);
   }
 }
