Svg Component elements

--- a/client/styles/_animations.styl
+++ b/client/styles/_animations.styl
@@ -24,6 +24,7 @@ offsets = translateX(-50%) translateY(-50%)
   animation: dash 5s infinite;
 }
 
+
 @keyframes dash {
   to {
     stroke-dashoffset: 100;
@@ -34,4 +35,12 @@ offsets = translateX(-50%) translateY(-50%)
   50% {
       transform: rotate(360deg);
   }
+}
+
+.g1 {
+  transform: translate(70, 25);
+}
+
+.g2 {
+  transform: translate(78, 9);
 }
