SVG Elements Staick mockups

--- a/client/styles/_animations.styl
+++ b/client/styles/_animations.styl
@@ -24,6 +24,10 @@ offsets = translateX(-50%) translateY(-50%)
   animation: dash 5s infinite;
 }
 
+.transform {
+  transform: rotate(90deg);
+  transform-origin: 50%;
+}
 
 @keyframes dash {
   to {
