--- a/client/styles/_animations.styl
+++ b/client/styles/_animations.styl
@@ -30,7 +30,7 @@ offsets = translateX(-50%) translateY(-50%)
 }
 
 .rotate {
-  animation: rotating 10s cubic-bezier(0,0,1,1) infinite alternate;
+  animation: rotating 3s cubic-bezier(0,0,1,1) infinite alternate;
   transform-origin: 50% 50%;
 }
 
@@ -46,18 +46,13 @@ offsets = translateX(-50%) translateY(-50%)
   }
 }
 
+/*translate(-88px, 507px);
+translate(239px, 370px);*/
+
 @keyframes rotating {
-  /*0% {
-    transform: rotate(0deg) translate(239px, 370px)
-  }
 
   100% {
-     transform: rotate(-30deg) translate(-88px, 507px)
-  }*/
-
-
-  50% {
-      transform: rotate(360deg) translate( 10px, 0px);
+      transform: rotate(360deg);
   }
 
 }
