Added Menu Component

--- a/client/styles/style.styl
+++ b/client/styles/style.styl
@@ -1,9 +1,15 @@
 @import '_normalize.styl'
 @import '_typography.styl'
 @import '_animations.styl'
+@import '_menu.styl'
 
 body
   background offwhite
+
+.wrapper
+  display flex
+  flex-direction column
+  align-items center
 
 .photo-grid
   display flex
