--- a/client/styles/_normalize.styl
+++ b/client/styles/_normalize.styl
@@ -5,6 +5,19 @@ input[type=reset],input[type=submit]{-webkit-appearance:button;cursor:pointer;}b
 
 * { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
 
+ul
+  -webkit-margin-before: 0;
+  -webkit-margin-start: 0;
+  -webkit-margin-end: 0;
+  -webkit-padding-start: 0;
+
+
+li
+  list-style none
+
+a
+  text-decoration none
+  cursor pointer
 
 img
   max-width 100%
