--- a/client/styles/_typography.styl
+++ b/client/styles/_typography.styl
@@ -9,10 +9,19 @@ lightgray = lightgrey
 darkgrey = #32302f
 mediumgrey = #949494
 
+.android
+  color: var(--android)
+
+.iOS
+  color: var(--iOS)
+
 html
   font-size 10px
   font-family 'Khula', sans-serif;
 
+figcaption
+  p
+    text-align center
 p
   font-size 1.6rem
   line-height 1.5
