--- a/client/styles/_normalize.styl
+++ b/client/styles/_normalize.styl
@@ -11,6 +11,10 @@ ul
   -webkit-margin-end: 0;
   -webkit-padding-start: 0;
 
+h3,h1
+  -webkit-margin-before: 0
+  -webkit-margin-after: 0
+  text-align: center
 
 li
   list-style none
