--- a/client/styles/style.styl
+++ b/client/styles/style.styl
@@ -11,6 +11,11 @@ body
   flex-direction column
   align-items center
 
+.wrap
+  display flex
+  flex-direction row
+  justify-content space-around
+
 .grid
   display flex
   flex-wrap wrap
@@ -25,7 +30,7 @@ body
   padding 2rem
   border 1px solid lightgray
   background white
-  box-shadow 0 0 0 5px rgba(0,0,0,0.03);
+  box-shadow 0 0 0 5px rgba(0,0,0,0.03)
   position relative
 
 .single
@@ -142,32 +147,31 @@ button, .button
     display inline-block
     position absolute
     content ''
-    width: 0;
-    height: 0;
-    border-style: solid;
+    width: 0
+    height: 0
+    border-style: solid
     border-width: 0 size size 0
     border-color: transparent blue transparent transparent
     top 30%
     left 0
 
 svg.svg-single_chart {
-  background-color: lightyellow;
-  cursor: pointer;
-  display: block;
-  height: 320px;
-  margin: 40px auto;
-  width: 480px;
+  cursor: pointer
+  display: block
+  height: 320px
+  margin: 40px auto
+  width: 480px
   .line-chart__axis-tick,
   .line-chart__axis-line {
-    stroke: darkgray;
+    stroke: darkgray
   }
   .line-chart__axis-text,
   .line-chart__axis-text {
-    font-family: sans-serif;
-    font-size: 14px;
+    font-family: sans-serif
+    font-size: 14px
   }
   .line-chart__area-plot {
-    stroke: steelblue;
-    stroke-width: 3px;
+    stroke: steelblue
+    stroke-width: 3px
   }
 }
