Add controller Reduce Width

--- a/client/styles/_animations.styl
+++ b/client/styles/_animations.styl
@@ -16,8 +16,8 @@ offsets = translateX(-50%) translateY(-50%)
     display none
 
 .wheel {
-  animation: rotate 5s cubic-bezier(1, 1, 1, 1) infinite alternate;
-  transform-origin: 30% 30%;
+  animation: rotate 5s infinite alternate;
+  transform-origin: 30% 30%
 }
 
 .expansion {
