--- a/client/styles/style.styl
+++ b/client/styles/style.styl
@@ -94,6 +94,8 @@ body
 
 .grid-element-wrap
   position relative
+  display flex
+  justify-content center
 
 .likes-heart
   background url(http://f.cl.ly/items/3Y373q2Q3J3Y1j203n0m/Bitmap-3.png) center no-repeat
@@ -114,6 +116,7 @@ body
 .control-buttons
   display flex
   justify-content space-between
+  margin-bottom: 10px
 
 button, .button
   border 2px solid lighten(grey, 90%)
@@ -128,6 +131,7 @@ button, .button
   color blue
   transition all 0.2s
   box-sizing padding-box
+  margin-right 10px
   &:hover, &:focus
     border-color blue
     outline 0
